infra/kubernetes/overlays/prod/patches/resources.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mc-server
  namespace: minecraft-server-prod
spec:
  template:
    spec:
      containers:
        - name: mc-server
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: "1"
              memory: 1536Mi
