infra/kubernetes/overlays/prod/patches/annotations-recursos.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft-server-prod
  annotations:
    minecraft-server.io/ambiente: prod
    minecraft-server.io/azure-aks-cluster: aks-minecraft-server-prod
    minecraft-server.io/documentacao-acesso: docs/access-and-hostname.md
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mc-server
  namespace: minecraft-server-prod
  annotations:
    minecraft-server.io/jogo-versao: "26.3"
    minecraft-server.io/jogo-tipo: FORGE
    minecraft-server.io/jogo-porta: "25565"
---
apiVersion: v1
kind: Service
metadata:
  name: mc-server-game
  namespace: minecraft-server-prod
  annotations:
    minecraft-server.io/azure-dns-fqdn-esperado: minecraftserverprod.brazilsouth.cloudapp.azure.com
    minecraft-server.io/conectividade-porta: "25565"
