infra/kubernetes/overlays/prod/patches/service-game-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-server-game
  namespace: minecraft-server-prod
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: minecraftserverprod
