infra/kubernetes/overlays/prod/patches/networkpolicy-cidrs.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mc-server-netpol
  namespace: mc-prod
spec:
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 25565
